Lab3/parser.out
Grammar:

Rule 0     S' -> instructions
Rule 1     instructions -> instruction
Rule 2     instructions -> instructions instruction
Rule 3     instruction -> RETURN right_hand_side_expression ;
Rule 4     instruction -> CONTINUE ;
Rule 5     instruction -> BREAK ;
Rule 6     instruction -> print_instruction
Rule 7     instruction -> full_line_instruction
Rule 8     instruction -> for_instruction
Rule 9     instruction -> while_instruction
Rule 10    instruction -> if_instruction
Rule 11    instruction -> { instructions }
Rule 12    if_instruction -> IF ( relation_expression ) instruction  [precedence=nonassoc, level=1]
Rule 13    if_instruction -> IF ( relation_expression ) instruction ELSE instruction  [precedence=nonassoc, level=2]
Rule 14    while_instruction -> WHILE ( relation_expression ) instruction
Rule 15    for_instruction -> FOR ID = id_int : id_int instruction
Rule 16    id_int -> INTNUM
Rule 17    id_int -> ID
Rule 18    print_instruction -> PRINT printables ;
Rule 19    printables -> value
Rule 20    printables -> printables , value
Rule 21    value -> matrix_ref
Rule 22    value -> STRING
Rule 23    value -> ID
Rule 24    value -> FLOATNUM
Rule 25    value -> INTNUM
Rule 26    right_hand_side_expression -> [ ]  [precedence=right, level=8]
Rule 27    right_hand_side_expression -> [ list_of_elems ]  [precedence=right, level=8]
Rule 28    right_hand_side_expression -> [ vectors ]  [precedence=right, level=8]
Rule 29    right_hand_side_expression -> right_hand_side_expression DOTDIVIDE right_hand_side_expression  [precedence=left, level=5]
Rule 30    right_hand_side_expression -> right_hand_side_expression DOTTIMES right_hand_side_expression  [precedence=left, level=5]
Rule 31    right_hand_side_expression -> right_hand_side_expression DOTMINUS right_hand_side_expression  [precedence=left, level=4]
Rule 32    right_hand_side_expression -> right_hand_side_expression DOTPLUS right_hand_side_expression  [precedence=left, level=4]
Rule 33    right_hand_side_expression -> right_hand_side_expression / right_hand_side_expression  [precedence=left, level=5]
Rule 34    right_hand_side_expression -> right_hand_side_expression * right_hand_side_expression  [precedence=left, level=5]
Rule 35    right_hand_side_expression -> right_hand_side_expression - right_hand_side_expression  [precedence=left, level=4]
Rule 36    right_hand_side_expression -> right_hand_side_expression + right_hand_side_expression  [precedence=left, level=4]
Rule 37    right_hand_side_expression -> right_hand_side_expression '  [precedence=nonassoc, level=6]
Rule 38    right_hand_side_expression -> value
Rule 39    right_hand_side_expression -> matrix_functions
Rule 40    right_hand_side_expression -> ( right_hand_side_expression )
Rule 41    right_hand_side_expression -> relation_expression
Rule 42    right_hand_side_expression -> unary_minus
Rule 43    unary_minus -> - right_hand_side_expression  [precedence=right, level=7]
Rule 44    full_line_instruction -> ( full_line_instruction )
Rule 45    full_line_instruction -> assign_instruction
Rule 46    full_line_instruction -> right_hand_side_expression
Rule 47    assign_instruction -> ID DIVIDEASSIGN right_hand_side_expression ;
Rule 48    assign_instruction -> ID TIMESASSIGN right_hand_side_expression ;
Rule 49    assign_instruction -> ID MINUSASSIGN right_hand_side_expression ;
Rule 50    assign_instruction -> ID PLUSASSIGN right_hand_side_expression ;
Rule 51    assign_instruction -> ID = right_hand_side_expression ;
Rule 52    assign_instruction -> matrix_ref DIVIDEASSIGN right_hand_side_expression ;
Rule 53    assign_instruction -> matrix_ref TIMESASSIGN right_hand_side_expression ;
Rule 54    assign_instruction -> matrix_ref MINUSASSIGN right_hand_side_expression ;
Rule 55    assign_instruction -> matrix_ref PLUSASSIGN right_hand_side_expression ;
Rule 56    assign_instruction -> matrix_ref = right_hand_side_expression ;
Rule 57    matrix_ref -> ID [ list_of_ints ]  [precedence=right, level=8]
Rule 58    relation_expression -> right_hand_side_expression NE right_hand_side_expression  [precedence=nonassoc, level=3]
Rule 59    relation_expression -> right_hand_side_expression EQ right_hand_side_expression  [precedence=nonassoc, level=3]
Rule 60    relation_expression -> right_hand_side_expression GE right_hand_side_expression  [precedence=nonassoc, level=3]
Rule 61    relation_expression -> right_hand_side_expression LE right_hand_side_expression  [precedence=nonassoc, level=3]
Rule 62    relation_expression -> right_hand_side_expression GT right_hand_side_expression  [precedence=nonassoc, level=3]
Rule 63    relation_expression -> right_hand_side_expression LT right_hand_side_expression  [precedence=nonassoc, level=3]
Rule 64    matrix_functions -> EYE ( id_int )
Rule 65    matrix_functions -> ONES ( id_int )
Rule 66    matrix_functions -> ZEROS ( id_int )
Rule 67    vectors -> vectors , [ ]  [precedence=right, level=8]
Rule 68    vectors -> [ ]  [precedence=right, level=8]
Rule 69    vectors -> vectors , [ list_of_elems ]  [precedence=right, level=8]
Rule 70    vectors -> [ list_of_elems ]  [precedence=right, level=8]
Rule 71    list_of_elems -> list_of_elems , value
Rule 72    list_of_elems -> value
Rule 73    list_of_ints -> list_of_ints , id_int
Rule 74    list_of_ints -> id_int

Unused terminals:

    UMINUS

Terminals, with rules where they appear:

'                    : 37
(                    : 12 13 14 40 44 64 65 66
)                    : 12 13 14 40 44 64 65 66
*                    : 34
+                    : 36
,                    : 20 67 69 71 73
-                    : 35 43
/                    : 33
:                    : 15
;                    : 3 4 5 18 47 48 49 50 51 52 53 54 55 56
=                    : 15 51 56
BREAK                : 5
CONTINUE             : 4
DIVIDEASSIGN         : 47 52
DOTDIVIDE            : 29
DOTMINUS             : 31
DOTPLUS              : 32
DOTTIMES             : 30
ELSE                 : 13
EQ                   : 59
EYE                  : 64
FLOATNUM             : 24
FOR                  : 15
GE                   : 60
GT                   : 62
ID                   : 15 17 23 47 48 49 50 51 57
IF                   : 12 13
INTNUM               : 16 25
LE                   : 61
LT                   : 63
MINUSASSIGN          : 49 54
NE                   : 58
ONES                 : 65
PLUSASSIGN           : 50 55
PRINT                : 18
RETURN               : 3
STRING               : 22
TIMESASSIGN          : 48 53
UMINUS               : 
WHILE                : 14
ZEROS                : 66
[                    : 26 27 28 57 67 68 69 70
]                    : 26 27 28 57 67 68 69 70
error                : 
{                    : 11
}                    : 11

Nonterminals, with rules where they appear:

assign_instruction   : 45
for_instruction      : 8
full_line_instruction : 7 44
id_int               : 15 15 64 65 66 73 74
if_instruction       : 10
instruction          : 1 2 12 13 13 14 15
instructions         : 2 11 0
list_of_elems        : 27 69 70 71
list_of_ints         : 57 73
matrix_functions     : 39
matrix_ref           : 21 52 53 54 55 56
print_instruction    : 6
printables           : 18 20
relation_expression  : 12 13 14 41
right_hand_side_expression : 3 29 29 30 30 31 31 32 32 33 33 34 34 35 35 36 36 37 40 43 46 47 48 49 50 51 52 53 54 55 56 58 58 59 59 60 60 61 61 62 62 63 63
unary_minus          : 42
value                : 19 20 38 71 72
vectors              : 28 67 69
while_instruction    : 9


state 0

    (0) S' -> . instructions
    (1) instructions -> . instruction
    (2) instructions -> . instructions instruction
    (3) instruction -> . RETURN right_hand_side_expression ;
    (4) instruction -> . CONTINUE ;
    (5) instruction -> . BREAK ;
    (6) instruction -> . print_instruction
    (7) instruction -> . full_line_instruction
    (8) instruction -> . for_instruction
    (9) instruction -> . while_instruction
    (10) instruction -> . if_instruction
    (11) instruction -> . { instructions }
    (18) print_instruction -> . PRINT printables ;
    (44) full_line_instruction -> . ( full_line_instruction )
    (45) full_line_instruction -> . assign_instruction
    (46) full_line_instruction -> . right_hand_side_expression
    (15) for_instruction -> . FOR ID = id_int : id_int instruction
    (14) while_instruction -> . WHILE ( relation_expression ) instruction
    (12) if_instruction -> . IF ( relation_expression ) instruction
    (13) if_instruction -> . IF ( relation_expression ) instruction ELSE instruction
    (47) assign_instruction -> . ID DIVIDEASSIGN right_hand_side_expression ;
    (48) assign_instruction -> . ID TIMESASSIGN right_hand_side_expression ;
    (49) assign_instruction -> . ID MINUSASSIGN right_hand_side_expression ;
    (50) assign_instruction -> . ID PLUSASSIGN right_hand_side_expression ;
    (51) assign_instruction -> . ID = right_hand_side_expression ;
    (52) assign_instruction -> . matrix_ref DIVIDEASSIGN right_hand_side_expression ;
    (53) assign_instruction -> . matrix_ref TIMESASSIGN right_hand_side_expression ;
    (54) assign_instruction -> . matrix_ref MINUSASSIGN right_hand_side_expression ;
    (55) assign_instruction -> . matrix_ref PLUSASSIGN right_hand_side_expression ;
    (56) assign_instruction -> . matrix_ref = right_hand_side_expression ;
    (26) right_hand_side_expression -> . [ ]
    (27) right_hand_side_expression -> . [ list_of_elems ]
    (28) right_hand_side_expression -> . [ vectors ]
    (29) right_hand_side_expression -> . right_hand_side_expression DOTDIVIDE right_hand_side_expression
    (30) right_hand_side_expression -> . right_hand_side_expression DOTTIMES right_hand_side_expression
    (31) right_hand_side_expression -> . right_hand_side_expression DOTMINUS right_hand_side_expression
    (32) right_hand_side_expression -> . right_hand_side_expression DOTPLUS right_hand_side_expression
    (33) right_hand_side_expression -> . right_hand_side_expression / right_hand_side_expression
    (34) right_hand_side_expression -> . right_hand_side_expression * right_hand_side_expression
    (35) right_hand_side_expression -> . right_hand_side_expression - right_hand_side_expression
    (36) right_hand_side_expression -> . right_hand_side_expression + right_hand_side_expression
    (37) right_hand_side_expression -> . right_hand_side_expression '
    (38) right_hand_side_expression -> . value
    (39) right_hand_side_expression -> . matrix_functions
    (40) right_hand_side_expression -> . ( right_hand_side_expression )
    (41) right_hand_side_expression -> . relation_expression
    (42) right_hand_side_expression -> . unary_minus
    (57) matrix_ref -> . ID [ list_of_ints ]
    (21) value -> . matrix_ref
    (22) value -> . STRING
    (23) value -> . ID
    (24) value -> . FLOATNUM
    (25) value -> . INTNUM
    (64) matrix_functions -> . EYE ( id_int )
    (65) matrix_functions -> . ONES ( id_int )
    (66) matrix_functions -> . ZEROS ( id_int )
    (58) relation_expression -> . right_hand_side_expression NE right_hand_side_expression
    (59) relation_expression -> . right_hand_side_expression EQ right_hand_side_expression
    (60) relation_expression -> . right_hand_side_expression GE right_hand_side_expression
    (61) relation_expression -> . right_hand_side_expression LE right_hand_side_expression
    (62) relation_expression -> . right_hand_side_expression GT right_hand_side_expression
    (63) relation_expression -> . right_hand_side_expression LT right_hand_side_expression
    (43) unary_minus -> . - right_hand_side_expression
    RETURN          shift and go to state 3
    CONTINUE        shift and go to state 5
    BREAK           shift and go to state 6
    {               shift and go to state 12
    PRINT           shift and go to state 13
    (               shift and go to state 14
    FOR             shift and go to state 16
    WHILE           shift and go to state 18
    IF              shift and go to state 20
    ID              shift and go to state 17
    [               shift and go to state 22
    STRING          shift and go to state 27
    FLOATNUM        shift and go to state 28
    INTNUM          shift and go to state 29
    EYE             shift and go to state 30
    ONES            shift and go to state 31
    ZEROS           shift and go to state 32
    -               shift and go to state 23

    instructions                   shift and go to state 1
    instruction                    shift and go to state 2
    right_hand_side_expression     shift and go to state 4
    print_instruction              shift and go to state 7
    full_line_instruction          shift and go to state 8
    for_instruction                shift and go to state 9
    while_instruction              shift and go to state 10
    if_instruction                 shift and go to state 11
    assign_instruction             shift and go to state 15
    relation_expression            shift and go to state 19
    matrix_ref                     shift and go to state 21
    value                          shift and go to state 24
    matrix_functions               shift and go to state 25
    unary_minus                    shift and go to state 26

state 1

    (0) S' -> instructions .
    (2) instructions -> instructions . instruction
    (3) instruction -> . RETURN right_hand_side_expression ;
    (4) instruction -> . CONTINUE ;
    (5) instruction -> . BREAK ;
    (6) instruction -> . print_instruction
    (7) instruction -> . full_line_instruction
    (8) instruction -> . for_instruction
    (9) instruction -> . while_instruction
    (10) instruction -> . if_instruction
    (11) instruction -> . { instructions }
    (18) print_instruction -> . PRINT printables ;
    (44) full_line_instruction -> . ( full_line_instruction )
    (45) full_line_instruction -> . assign_instruction
    (46) full_line_instruction -> . right_hand_side_expression
    (15) for_instruction -> . FOR ID = id_int : id_int instruction
    (14) while_instruction -> . WHILE ( relation_expression ) instruction
    (12) if_instruction -> . IF ( relation_expression ) instruction
    (13) if_instruction -> . IF ( relation_expression ) instruction ELSE instruction
    (47) assign_instruction -> . ID DIVIDEASSIGN right_hand_side_expression ;
    (48) assign_instruction -> . ID TIMESASSIGN right_hand_side_expression ;
    (49) assign_instruction -> . ID MINUSASSIGN right_hand_side_expression ;
    (50) assign_instruction -> . ID PLUSASSIGN right_hand_side_expression ;
    (51) assign_instruction -> . ID = right_hand_side_expression ;
    (52) assign_instruction -> . matrix_ref DIVIDEASSIGN right_hand_side_expression ;
    (53) assign_instruction -> . matrix_ref TIMESASSIGN right_hand_side_expression ;
    (54) assign_instruction -> . matrix_ref MINUSASSIGN right_hand_side_expression ;
    (55) assign_instruction -> . matrix_ref PLUSASSIGN right_hand_side_expression ;
    (56) assign_instruction -> . matrix_ref = right_hand_side_expression ;
    (26) right_hand_side_expression -> . [ ]
    (27) right_hand_side_expression -> . [ list_of_elems ]
    (28) right_hand_side_expression -> . [ vectors ]
    (29) right_hand_side_expression -> . right_hand_side_expression DOTDIVIDE right_hand_side_expression
    (30) right_hand_side_expression -> . right_hand_side_expression DOTTIMES right_hand_side_expression
    (31) right_hand_side_expression -> . right_hand_side_expression DOTMINUS right_hand_side_expression
    (32) right_hand_side_expression -> . right_hand_side_expression DOTPLUS right_hand_side_expression
    (33) right_hand_side_expression -> . right_hand_side_expression / right_hand_side_expression
    (34) right_hand_side_expression -> . right_hand_side_expression * right_hand_side_expression
    (35) right_hand_side_expression -> . right_hand_side_expression - right_hand_side_expression
    (36) right_hand_side_expression -> . right_hand_side_expression + right_hand_side_expression
    (37) right_hand_side_expression -> . right_hand_side_expression '
    (38) right_hand_side_expression -> . value
    (39) right_hand_side_expression -> . matrix_functions
    (40) right_hand_side_expression -> . ( right_hand_side_expression )
    (41) right_hand_side_expression -> . relation_expression
    (42) right_hand_side_expression -> . unary_minus
    (57) matrix_ref -> . ID [ list_of_ints ]
    (21) value -> . matrix_ref
    (22) value -> . STRING
    (23) value -> . ID
    (24) value -> . FLOATNUM
    (25) value -> . INTNUM
    (64) matrix_functions -> . EYE ( id_int )
    (65) matrix_functions -> . ONES ( id_int )
    (66) matrix_functions -> . ZEROS ( id_int )
    (58) relation_expression -> . right_hand_side_expression NE right_hand_side_expression
    (59) relation_expression -> . right_hand_side_expression EQ right_hand_side_expression
    (60) relation_expression -> . right_hand_side_expression GE right_hand_side_expression
    (61) relation_expression -> . right_hand_side_expression LE right_hand_side_expression
    (62) relation_expression -> . right_hand_side_expression GT right_hand_side_expression
    (63) relation_expression -> . right_hand_side_expression LT right_hand_side_expression
    (43) unary_minus -> . - right_hand_side_expression
    RETURN          shift and go to state 3
    CONTINUE        shift and go to state 5
    BREAK           shift and go to state 6
    {               shift and go to state 12
    PRINT           shift and go to state 13
    (               shift and go to state 14
    FOR             shift and go to state 16
    WHILE           shift and go to state 18
    IF              shift and go to state 20
    ID              shift and go to state 17
    [               shift and go to state 22
    STRING          shift and go to state 27
    FLOATNUM        shift and go to state 28
    INTNUM          shift and go to state 29
    EYE             shift and go to state 30
    ONES            shift and go to state 31
    ZEROS           shift and go to state 32
    -               shift and go to state 23

    instruction                    shift and go to state 33
    right_hand_side_expression     shift and go to state 4
    print_instruction              shift and go to state 7
    full_line_instruction          shift and go to state 8
    for_instruction                shift and go to state 9
    while_instruction              shift and go to state 10
    if_instruction                 shift and go to state 11
    assign_instruction             shift and go to state 15
    relation_expression            shift and go to state 19
    matrix_ref                     shift and go to state 21
    value                          shift and go to state 24
    matrix_functions               shift and go to state 25
    unary_minus                    shift and go to state 26

state 2

    (1) instructions -> instruction .
    RETURN          reduce using rule 1 (instructions -> instruction .)
    CONTINUE        reduce using rule 1 (instructions -> instruction .)
    BREAK           reduce using rule 1 (instructions -> instruction .)
    {               reduce using rule 1 (instructions -> instruction .)
    PRINT           reduce using rule 1 (instructions -> instruction .)
    (               reduce using rule 1 (instructions -> instruction .)
    FOR             reduce using rule 1 (instructions -> instruction .)
    WHILE           reduce using rule 1 (instructions -> instruction .)
    IF              reduce using rule 1 (instructions -> instruction .)
    ID              reduce using rule 1 (instructions -> instruction .)
    [               reduce using rule 1 (instructions -> instruction .)
    STRING          reduce using rule 1 (instructions -> instruction .)
    FLOATNUM        reduce using rule 1 (instructions -> instruction .)
    INTNUM          reduce using rule 1 (instructions -> instruction .)
    EYE             reduce using rule 1 (instructions -> instruction .)
    ONES            reduce using rule 1 (instructions -> instruction .)
    ZEROS           reduce using rule 1 (instructions -> instruction .)
    -               reduce using rule 1 (instructions -> instruction .)
    $end            reduce using rule 1 (instructions -> instruction .)
    }               reduce using rule 1 (instructions -> instruction .)


state 3

    (3) instruction -> RETURN . right_hand_side_expression ;
    (26) right_hand_side_expression -> . [ ]
    (27) right_hand_side_expression -> . [ list_of_elems ]
    (28) right_hand_side_expression -> . [ vectors ]
    (29) right_hand_side_expression -> . right_hand_side_expression DOTDIVIDE right_hand_side_expression
    (30) right_hand_side_expression -> . right_hand_side_expression DOTTIMES right_hand_side_expression
    (31) right_hand_side_expression -> . right_hand_side_expression DOTMINUS right_hand_side_expression
    (32) right_hand_side_expression -> . right_hand_side_expression DOTPLUS right_hand_side_expression
    (33) right_hand_side_expression -> . right_hand_side_expression / right_hand_side_expression
    (34) right_hand_side_expression -> . right_hand_side_expression * right_hand_side_expression
    (35) right_hand_side_expression -> . right_hand_side_expression - right_hand_side_expression
    (36) right_hand_side_expression -> . right_hand_side_expression + right_hand_side_expression
    (37) right_hand_side_expression -> . right_hand_side_expression '
    (38) right_hand_side_expression -> . value
    (39) right_hand_side_expression -> . matrix_functions
    (40) right_hand_side_expression -> . ( right_hand_side_expression )
    (41) right_hand_side_expression -> . relation_expression
    (42) right_hand_side_expression -> . unary_minus
    (21) value -> . matrix_ref
    (22) value -> . STRING
    (23) value -> . ID
    (24) value -> . FLOATNUM
    (25) value -> . INTNUM
    (64) matrix_functions -> . EYE ( id_int )
    (65) matrix_functions -> . ONES ( id_int )
    (66) matrix_functions -> . ZEROS ( id_int )
    (58) relation_expression -> . right_hand_side_expression NE right_hand_side_expression
    (59) relation_expression -> . right_hand_side_expression EQ right_hand_side_expression
    (60) relation_expression -> . right_hand_side_expression GE right_hand_side_expression
    (61) relation_expression -> . right_hand_side_expression LE right_hand_side_expression
    (62) relation_expression -> . right_hand_side_expression GT right_hand_side_expression
    (63) relation_expression -> . right_hand_side_expression LT right_hand_side_expression
    (43) unary_minus -> . - right_hand_side_expression
    (57) matrix_ref -> . ID [ list_of_ints ]
    [               shift and go to state 22
    (               shift and go to state 35
    STRING          shift and go to state 27
    ID              shift and go to state 37
    FLOATNUM        shift and go to state 28
    INTNUM          shift and go to state 29
    EYE             shift and go to state 30
    ONES            shift and go to state 31
    ZEROS           shift and go to state 32
    -               shift and go to state 23

    right_hand_side_expression     shift and go to state 34
    value                          shift and go to state 24
    matrix_functions               shift and go to state 25
    relation_expression            shift and go to state 19
    unary_minus                    shift and go to state 26
    matrix_ref                     shift and go to state 36

state 4

    (46) full_line_instruction -> right_hand_side_expression .
    (29) right_hand_side_expression -> right_hand_side_expression . DOTDIVIDE right_hand_side_expression
    (30) right_hand_side_expression -> right_hand_side_expression . DOTTIMES right_hand_side_expression
    (31) right_hand_side_expression -> right_hand_side_expression . DOTMINUS right_hand_side_expression
    (32) right_hand_side_expression -> right_hand_side_expression . DOTPLUS right_hand_side_expression
    (33) right_hand_side_expression -> right_hand_side_expression . / right_hand_side_expression
    (34) right_hand_side_expression -> right_hand_side_expression . * right_hand_side_expression
    (35) right_hand_side_expression -> right_hand_side_expression . - right_hand_side_expression
    (36) right_hand_side_expression -> right_hand_side_expression . + right_hand_side_expression
    (37) right_hand_side_expression -> right_hand_side_expression . '
    (58) relation_expression -> right_hand_side_expression . NE right_hand_side_expression
    (59) relation_expression -> right_hand_side_expression . EQ right_hand_side_expression
    (60) relation_expression -> right_hand_side_expression . GE right_hand_side_expression
    (61) relation_expression -> right_hand_side_expression . LE right_hand_side_expression
    (62) relation_expression -> right_hand_side_expression . GT right_hand_side_expression
    (63) relation_expression -> right_hand_side_expression . LT right_hand_side_expression
  ! shift/reduce conflict for - resolved as shift
    RETURN          reduce using rule 46 (full_line_instruction -> right_hand_side_expression .)
    CONTINUE        reduce using rule 46 (full_line_instruction -> right_hand_side_expression .)
    BREAK           reduce using rule 46 (full_line_instruction -> right_hand_side_expression .)
    {               reduce using rule 46 (full_line_instruction -> right_hand_side_expression .)
    PRINT           reduce using rule 46 (full_line_instruction -> right_hand_side_expression .)
    (               reduce using rule 46 (full_line_instruction -> right_hand_side_expression .)
    FOR             reduce using rule 46 (full_line_instruction -> right_hand_side_expression .)
    WHILE           reduce using rule 46 (full_line_instruction -> right_hand_side_expression .)
    IF              reduce using rule 46 (full_line_instruction -> right_hand_side_expression .)
    ID              reduce using rule 46 (full_line_instruction -> right_hand_side_expression .)
    [               reduce using rule 46 (full_line_instruction -> right_hand_side_expression .)
    STRING          reduce using rule 46 (full_line_instruction -> right_hand_side_expression .)
    FLOATNUM        reduce using rule 46 (full_line_instruction -> right_hand_side_expression .)
    INTNUM          reduce using rule 46 (full_line_instruction -> right_hand_side_expression .)
    EYE             reduce using rule 46 (full_line_instruction -> right_hand_side_expression .)
    ONES            reduce using rule 46 (full_line_instruction -> right_hand_side_expression .)
    ZEROS           reduce using rule 46 (full_line_instruction -> right_hand_side_expression .)
    $end            reduce using rule 46 (full_line_instruction -> right_hand_side_expression .)
    }               reduce using rule 46 (full_line_instruction -> right_hand_side_expression .)
    ELSE            reduce using rule 46 (full_line_instruction -> right_hand_side_expression .)
    DOTDIVIDE       shift and go to state 38
    DOTTIMES        shift and go to state 39
    DOTMINUS        shift and go to state 40
    DOTPLUS         shift and go to state 41
    /               shift and go to state 42
    *               shift and go to state 43
    -               shift and go to state 44
    +               shift and go to state 45
    '               shift and go to state 46
    NE              shift and go to state 47
    EQ              shift and go to state 48
    GE              shift and go to state 49
    LE              shift and go to state 50
    GT              shift and go to state 51
    LT              shift and go to state 52


state 5

    (4) instruction -> CONTINUE . ;
    ;               shift and go to state 53


state 6

    (5) instruction -> BREAK . ;
    ;               shift and go to state 54


state 7

    (6) instruction -> print_instruction .
    RETURN          reduce using rule 6 (instruction -> print_instruction .)
    CONTINUE        reduce using rule 6 (instruction -> print_instruction .)
    BREAK           reduce using rule 6 (instruction -> print_instruction .)
    {               reduce using rule 6 (instruction -> print_instruction .)
    PRINT           reduce using rule 6 (instruction -> print_instruction .)
    (               reduce using rule 6 (instruction -> print_instruction .)
    FOR             reduce using rule 6 (instruction -> print_instruction .)
    WHILE           reduce using rule 6 (instruction -> print_instruction .)
    IF              reduce using rule 6 (instruction -> print_instruction .)
    ID              reduce using rule 6 (instruction -> print_instruction .)
    [               reduce using rule 6 (instruction -> print_instruction .)
    STRING          reduce using rule 6 (instruction -> print_instruction .)
    FLOATNUM        reduce using rule 6 (instruction -> print_instruction .)
    INTNUM          reduce using rule 6 (instruction -> print_instruction .)
    EYE             reduce using rule 6 (instruction -> print_instruction .)
    ONES            reduce using rule 6 (instruction -> print_instruction .)
    ZEROS           reduce using rule 6 (instruction -> print_instruction .)
    -               reduce using rule 6 (instruction -> print_instruction .)
    $end            reduce using rule 6 (instruction -> print_instruction .)
    }               reduce using rule 6 (instruction -> print_instruction .)
    ELSE            reduce using rule 6 (instruction -> print_instruction .)


state 8

    (7) instruction -> full_line_instruction .
    RETURN          reduce using rule 7 (instruction -> full_line_instruction .)
    CONTINUE        reduce using rule 7 (instruction -> full_line_instruction .)
    BREAK           reduce using rule 7 (instruction -> full_line_instruction .)
    {               reduce using rule 7 (instruction -> full_line_instruction .)
    PRINT           reduce using rule 7 (instruction -> full_line_instruction .)
    (               reduce using rule 7 (instruction -> full_line_instruction .)
    FOR             reduce using rule 7 (instruction -> full_line_instruction .)
    WHILE           reduce using rule 7 (instruction -> full_line_instruction .)
    IF              reduce using rule 7 (instruction -> full_line_instruction .)
    ID              reduce using rule 7 (instruction -> full_line_instruction .)
    [               reduce using rule 7 (instruction -> full_line_instruction .)
    STRING          reduce using rule 7 (instruction -> full_line_instruction .)
    FLOATNUM        reduce using rule 7 (instruction -> full_line_instruction .)
    INTNUM          reduce using rule 7 (instruction -> full_line_instruction .)
    EYE             reduce using rule 7 (instruction -> full_line_instruction .)
    ONES            reduce using rule 7 (instruction -> full_line_instruction .)
    ZEROS           reduce using rule 7 (instruction -> full_line_instruction .)
    -               reduce using rule 7 (instruction -> full_line_instruction .)
    $end            reduce using rule 7 (instruction -> full_line_instruction .)
    }               reduce using rule 7 (instruction -> full_line_instruction .)
    ELSE            reduce using rule 7 (instruction -> full_line_instruction .)


state 9

    (8) instruction -> for_instruction .
    RETURN          reduce using rule 8 (instruction -> for_instruction .)
    CONTINUE        reduce using rule 8 (instruction -> for_instruction .)
    BREAK           reduce using rule 8 (instruction -> for_instruction .)
    {               reduce using rule 8 (instruction -> for_instruction .)
    PRINT           reduce using rule 8 (instruction -> for_instruction .)
    (               reduce using rule 8 (instruction -> for_instruction .)
    FOR             reduce using rule 8 (instruction -> for_instruction .)
    WHILE           reduce using rule 8 (instruction -> for_instruction .)
    IF              reduce using rule 8 (instruction -> for_instruction .)
    ID              reduce using rule 8 (instruction -> for_instruction .)
    [               reduce using rule 8 (instruction -> for_instruction .)
    STRING          reduce using rule 8 (instruction -> for_instruction .)
    FLOATNUM        reduce using rule 8 (instruction -> for_instruction .)
    INTNUM          reduce using rule 8 (instruction -> for_instruction .)
    EYE             reduce using rule 8 (instruction -> for_instruction .)
    ONES            reduce using rule 8 (instruction -> for_instruction .)
    ZEROS           reduce using rule 8 (instruction -> for_instruction .)
    -               reduce using rule 8 (instruction -> for_instruction .)
    $end            reduce using rule 8 (instruction -> for_instruction .)
    }               reduce using rule 8 (instruction -> for_instruction .)
    ELSE            reduce using rule 8 (instruction -> for_instruction .)


state 10

    (9) instruction -> while_instruction .
    RETURN          reduce using rule 9 (instruction -> while_instruction .)
    CONTINUE        reduce using rule 9 (instruction -> while_instruction .)
    BREAK           reduce using rule 9 (instruction -> while_instruction .)
    {               reduce using rule 9 (instruction -> while_instruction .)
    PRINT           reduce using rule 9 (instruction -> while_instruction .)
    (               reduce using rule 9 (instruction -> while_instruction .)
    FOR             reduce using rule 9 (instruction -> while_instruction .)
    WHILE           reduce using rule 9 (instruction -> while_instruction .)
    IF              reduce using rule 9 (instruction -> while_instruction .)
    ID              reduce using rule 9 (instruction -> while_instruction .)
    [               reduce using rule 9 (instruction -> while_instruction .)
    STRING          reduce using rule 9 (instruction -> while_instruction .)
    FLOATNUM        reduce using rule 9 (instruction -> while_instruction .)
    INTNUM          reduce using rule 9 (instruction -> while_instruction .)
    EYE             reduce using rule 9 (instruction -> while_instruction .)
    ONES            reduce using rule 9 (instruction -> while_instruction .)
    ZEROS           reduce using rule 9 (instruction -> while_instruction .)
    -               reduce using rule 9 (instruction -> while_instruction .)
    $end            reduce using rule 9 (instruction -> while_instruction .)
    }               reduce using rule 9 (instruction -> while_instruction .)
    ELSE            reduce using rule 9 (instruction -> while_instruction .)


state 11

    (10) instruction -> if_instruction .
    RETURN          reduce using rule 10 (instruction -> if_instruction .)
    CONTINUE        reduce using rule 10 (instruction -> if_instruction .)
    BREAK           reduce using rule 10 (instruction -> if_instruction .)
    {               reduce using rule 10 (instruction -> if_instruction .)
    PRINT           reduce using rule 10 (instruction -> if_instruction .)
    (               reduce using rule 10 (instruction -> if_instruction .)
    FOR             reduce using rule 10 (instruction -> if_instruction .)
    WHILE           reduce using rule 10 (instruction -> if_instruction .)
    IF              reduce using rule 10 (instruction -> if_instruction .)
    ID              reduce using rule 10 (instruction -> if_instruction .)
    [               reduce using rule 10 (instruction -> if_instruction .)
    STRING          reduce using rule 10 (instruction -> if_instruction .)
    FLOATNUM        reduce using rule 10 (instruction -> if_instruction .)
    INTNUM          reduce using rule 10 (instruction -> if_instruction .)
    EYE             reduce using rule 10 (instruction -> if_instruction .)
    ONES            reduce using rule 10 (instruction -> if_instruction .)
    ZEROS           reduce using rule 10 (instruction -> if_instruction .)
    -               reduce using rule 10 (instruction -> if_instruction .)
    $end            reduce using rule 10 (instruction -> if_instruction .)
    }               reduce using rule 10 (instruction -> if_instruction .)
    ELSE            reduce using rule 10 (instruction -> if_instruction .)


state 12

    (11) instruction -> { . instructions }
    (1) instructions -> . instruction
    (2) instructions -> . instructions instruction
    (3) instruction -> . RETURN right_hand_side_expression ;
    (4) instruction -> . CONTINUE ;
    (5) instruction -> . BREAK ;
    (6) instruction -> . print_instruction
    (7) instruction -> . full_line_instruction
    (8) instruction -> . for_instruction
    (9) instruction -> . while_instruction
    (10) instruction -> . if_instruction
    (11) instruction -> . { instructions }
    (18) print_instruction -> . PRINT printables ;
    (44) full_line_instruction -> . ( full_line_instruction )
    (45) full_line_instruction -> . assign_instruction
    (46) full_line_instruction -> . right_hand_side_expression
    (15) for_instruction -> . FOR ID = id_int : id_int instruction
    (14) while_instruction -> . WHILE ( relation_expression ) instruction
    (12) if_instruction -> . IF ( relation_expression ) instruction
    (13) if_instruction -> . IF ( relation_expression ) instruction ELSE instruction
    (47) assign_instruction -> . ID DIVIDEASSIGN right_hand_side_expression ;
    (48) assign_instruction -> . ID TIMESASSIGN right_hand_side_expression ;
    (49) assign_instruction -> . ID MINUSASSIGN right_hand_side_expression ;
    (50) assign_instruction -> . ID PLUSASSIGN right_hand_side_expression ;
    (51) assign_instruction -> . ID = right_hand_side_expression ;
    (52) assign_instruction -> . matrix_ref DIVIDEASSIGN right_hand_side_expression ;
    (53) assign_instruction -> . matrix_ref TIMESASSIGN right_hand_side_expression ;
    (54) assign_instruction -> . matrix_ref MINUSASSIGN right_hand_side_expression ;
